@@ -1,3 +1,4 @@
+	* improve error message for 'file too short'
 	* fix piece-picker stat bug when only selecting some files for download
 	* fix bug in async_add_torrent when settings file_priorities
 	* fix boost-1.42 support for python bindings
